--- a/elements-game/public/index.html
+++ b/elements-game/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700i" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
